WIP
-----------------------------
* Brake Bias Widget
  - No longer resets baseline bias delta while game is paused (requested by user "matteocnt92"). Baseline bias delta now also resets while vehicle is stationary during formation lap.

* Stint History Widget
  - No longer resets current stint data while game is paused (requested by user "ebeninca"). Stint history is no longer recorded during formation lap.

* Trailing Widget
  - [New]Added "show_steering" option (requested by user "Badorio"), which shows steering input plot. This option is disabled by default.

* Tyre carcass, Tyre inner layer, Tyre temperature Widget
  - Fixed "enable_heatmap_auto_matching" not working if "show_tyre_compound" option is disabled.

2.33.1 (2025-08-22)
-----------------------------
* [New]Check for Updates
  - Add "Check For Updates On Startup" global option (requested by user "coasting-nc"), which enables automatically checking for updates on startup, and displays notification message in main window.
    This option is enabled by default, and can be disabled in "Application" dialog from "Config" menu in main window.
    Note, this option is checked only once per startup, and notification message will only be displayed if new updates is available.
    This option only checks for new updates info, it does not provide updates downloading or installing feature.
  - Add "Check for Updates" option to "Help" menu in main window, which allows to manually check for updates. This option always displays notification message in main window.
  - Add notification message for "Check for Updates" in main window. Click on the notification message will bring up a menu, where user can click "View Updates On GitHub" to open "Latest Releases" page in web browser, or "Dismiss" the message.
  - Add "Check for Updates" message to console output.

* Spectate mode
  - Now lists player names in alphabetical order, making it easier for finding specific player.

* Relative finish order, Track map Widget