@@ -604,7 +604,8 @@ WIDGET_DEFAULT = {
         "bkg_color_speed_limiter": "#FF2200",
         "show_yellow_flag": True,
         "show_yellow_flag_for_race_only": False,
-        "yellow_flag_maximum_range": 500,
+        "yellow_flag_maximum_range_ahead": 500,
+        "yellow_flag_maximum_range_behind": 50,
         "font_color_yellow_flag": "#000000",
         "bkg_color_yellow_flag": "#FFFF00",
         "show_blue_flag": True,
